tests/ui/move-expr/outside-plain-closure.stderr
error: `move(expr)` is only supported in plain closures
  --> $DIR/outside-plain-closure.rs:5:13
   |
LL |     let _ = move(String::from("nope"));
   |             ^^^^

error: aborting due to 1 previous error

